[gd_scene load_steps=7 format=3 uid="uid://boalu10wxiqcc"]

[ext_resource type="Script" path="res://scripts/items/ui.gd" id="1_xrqhk"]
[ext_resource type="Texture2D" uid="uid://bnb1f76bygn3l" path="res://sprites/ui/CoinCounter.png" id="2_80vv8"]
[ext_resource type="FontVariation" uid="uid://b3e6p50lhmld2" path="res://fonts/inter.tres" id="3_yw3mw"]
[ext_resource type="PackedScene" uid="uid://b6cnw4giy1shp" path="res://nodes/ui/dialogue_box.tscn" id="4_x4vbx"]
[ext_resource type="PackedScene" uid="uid://ctfkxxa21t0q6" path="res://nodes/ui/camera_filter.tscn" id="6_xh5rv"]
[ext_resource type="Texture2D" uid="uid://bparjkamphf3f" path="res://icon.svg" id="7_co02g"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_xrqhk")

[node name="CoinCount" type="Sprite2D" parent="."]
position = Vector2(1729, 103)
texture = ExtResource("2_80vv8")

[node name="Label" type="Label" parent="CoinCount"]
texture_filter = 1
texture_repeat = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -37.0
offset_right = -180.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.20871, 0.20871, 0.20871, 1)
theme_override_fonts/font = ExtResource("3_yw3mw")
theme_override_font_sizes/font_size = 61
text = "1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LifeBar" type="Node2D" parent="."]

[node name="DialogueBox" parent="." instance=ExtResource("4_x4vbx")]
anchor_left = 0.019
anchor_top = 0.678
anchor_right = 0.982
anchor_bottom = 0.969
offset_left = 0.519997
offset_top = -0.240051
offset_right = -0.440063
offset_bottom = -0.52002

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(950, 509.5)
scale = Vector2(30.3125, 18.0781)
texture = ExtResource("7_co02g")

[node name="CameraFilter" parent="." instance=ExtResource("6_xh5rv")]
